* adding Series section (PART OF) * fixing promoted by section to look good on mobile * adding border bottom of the same color to RaceTypeBadge so it looks nice on mobile

--- a/src/client/app.scss
+++ b/src/client/app.scss
@@ -95,6 +95,13 @@ a {
   &.rgt-4 { margin-right: 4rem; }
 }
 
+.top {
+  &.top-0 {top: 0;}
+}
+
+.nowrap {
+  white-space: nowrap;
+}
 
 //making drift z-index lowe than modal z-index
 #drift-widget-container {
